interpreter-janeklang/tests/good/13_nestedFunction_1.janek
void outer() {
    int x = 10;
    void inner() {
        print(x);
    }
    inner();
}

int main() {
    outer();
    return 0;
}
