interpreter-janeklang/tests/bad/02_logicOnInt_4.janek
int main(){
    2137 || 420;
    return 0;
}